--- a/cloudformation/sftp_idp.yaml
+++ b/cloudformation/sftp_idp.yaml
@@ -148,7 +148,7 @@ Parameters:
       "Handler": lambda.handler
       "Role":
         "Fn::GetAtt": "LambdaExecutionRole.Arn"
-      "Runtime": "nodejs12"
+      "Runtime": "nodejs12.x"
       Environment:
         Variables:
           PUBLIC_BUCKET: !Ref PublicBucket
